assets/css/custom.css
.wrapper {
    background: rgb(245, 245, 245);
}

#home .caption-content {
    color: #fff;
    text-shadow: -1px -1px 0 rgb(75, 164, 206),
    -1px 1px 7px rgba(1, 19, 29, 0.45);
}

/**
 Astronauts/animations
 */

@keyframes alternating-logo-letters {
    from {
        fill: #ffffff;
    }

    to {
        fill: #e36876;
    }
}

.navbar:not(.navbar-transparent) .ckclogo .letters path:nth-of-type(0) {
    animation-delay: 0.0s;
}

.navbar:not(.navbar-transparent) .ckclogo .letters path:nth-of-type(1) {
    animation-delay: 0.1s;
}

.navbar:not(.navbar-transparent) .ckclogo .letters path:nth-of-type(2) {
    animation-delay: 0.2s;
}

.navbar:not(.navbar-transparent) .ckclogo .letters path:nth-of-type(3) {
    animation-delay: 0.3s;
}

.navbar:not(.navbar-transparent) .ckclogo .letters path:nth-of-type(4) {
    animation-delay: 0.25s;
}

.navbar:not(.navbar-transparent) .ckclogo .letters path:nth-of-type(5) {
    animation-delay: 0.3s;
}

.navbar:not(.navbar-transparent) .ckclogo .letters path:nth-of-type(6) {
    animation-delay: 0.35s;
}

.navbar:not(.navbar-transparent) .ckclogo .letters path:nth-of-type(7) {
    animation-delay: 0.4s;
}

.navbar:not(.navbar-transparent) .ckclogo .letters path:nth-of-type(8) {
    animation-delay: 0.45s;
}

@keyframes alternating-color-1 {
    from {
        fill: #66a9d7;
    }

    to {
        fill: #e36876;
    }
}

@keyframes alternating-color-2 {
    from {
        fill: #e36876;
    }

    to {
        fill: #66a9d7;
    }
}

.astronaut-stripe path {
    animation-duration: 1s;
    animation-iteration-count: infinite;
    animation-direction: alternate;
    animation-timing-function: ease-in-out;
    animation-name: alternating-color-1;
}

/*.astronaut-stripe path:nth-of-type(odd) {*/
/*animation-name: alternating-color-2;*/
/*}*/
/*.astronaut-stripe path:nth-of-type(even) {*/
/*animation-name: alternating-color-2;*/
/*!*fill: green !important;*!*/
/*}*/
/*.astronaut-stripe path:nth-of-type(3) {*/
/*animation-name: alternating-color-1;*/
/*fill: orange !important;*/
/*}*/

.astronaut-stripe path:nth-of-type(0) {
    animation-delay: 0.0s;
}

.astronaut-stripe path:nth-of-type(1) {
    animation-delay: 0.1s;
}

.astronaut-stripe path:nth-of-type(2) {
    animation-delay: 0.2s;
}

.astronaut-stripe path:nth-of-type(3) {
    animation-delay: 0.3s;
}

.astronaut-stripe path:nth-of-type(4) {
    animation-delay: 0.25s;
}

.astronaut-stripe path:nth-of-type(5) {
    animation-delay: 0.3s;
}

.astronaut-stripe path:nth-of-type(6) {
    animation-delay: 0.35s;
}

.astronaut-stripe path:nth-of-type(7) {
    animation-delay: 0.4s;
}

.astronaut-stripe path:nth-of-type(8) {
    animation-delay: 0.45s;
}

#astro_1 {
    position: absolute;
    top: 5%;
    right: -5%;
    animation-name: hovering_1;
    animation-duration: 4s;
}

#astro_2 {
    position: absolute;
    top: -10%;
    right: -30%;
    animation-name: hovering_2;
    animation-duration: 5s;
}

@keyframes hovering_1 {
    0% { transform: translateY(75px); }
    100% { transform: none; }
}

@keyframes hovering_2 {
    0% { transform: none; }
    100% { transform: translateY(75px); }
}

#astro_1, #astro_2 {
    animation-iteration-count: infinite;
    animation-direction: alternate;
    animation-timing-function: ease;
}

#astro_1 {
    animation-delay: .1s;
}

/* Tablet */
@media (min-width: 768px) and (max-width: 1024px) {
    .navbar.navbar-transparent .navbar-header {
        text-align: center;
    }

    #astro_1, #astro_2 {
        width: 400px;
        height: 200px;
    }

    #astro_1 {
        top: 20%;
        right: 12%;
    }

    #astro_2 {
        width: 200px;
        top: 10%;
        right: 1%;
    }

    @keyframes hovering_1 {
        0% { transform: translateY(25px); }
        100% { transform: none; }
    }
    @keyframes hovering_2 {
        0% { transform: none; }
        100% { transform: translateY(25px); }
    }

    .hs-title-size-3 {
        font-size: 50px;
    }
    .font-code {
        font-size: 24px;
    }
}

/* Mobile */
@media (min-width: 481px) and (max-width: 767px) {
    .navbar.navbar-transparent .navbar-header {
        text-align: center;
    }
    #astro_1, #astro_2 {
        width: 400px;
        height: 200px;
    }

    #astro_1 {
        top: 60%;
        right: 25%;
    }

    #astro_2 {
        width: 200px;
        top: 50%;
        right: 0%;
    }

    @keyframes hovering_1 {
        0% { transform: translateY(25px); }
        100% { transform: none; }
    }
    @keyframes hovering_2 {
        0% { transform: none; }
        100% { transform: translateY(25px); }
    }
}

/******************************************************************************
 Header/navbar
 *****************************************************************************/
#ckcollab_logo_svg {
    cursor: pointer;
    margin-top: 4px;
    margin-bottom: -5px;

    /* Specifying this height makes transitions nice and links aligned properly */

    /*-webkit-filter: drop-shadow(-2px -2px 10px rgba(0, 0, 0, 0.59));*/
    /*filter: drop-shadow(-2px -2px 10px rgba(0, 0, 0, 0.59));*/

    -webkit-transition: all 0.1s ease-in-out;
    -moz-transition: all 0.1s ease-in-out;
    -o-transition: all 0.1s ease-in-out;
    transition: all 0.1s ease-in-out;
}

.navbar-transparent #ckcollab_logo_svg {
    height: 300px;
}

#ckcollab_logo_svg:hover {
    margin-top: 0;
    opacity: 1;
}

#ckcollab_logo_svg path {
    /*stroke: red;*/
}

.navbar.navbar-transparent .navbar-nav > li > a {
    /* Hide links when scrolled to the top of the page */
    display: none;
}

.navbar:not(.navbar-transparent) #ckcollab_logo_svg {
    /*height: 50px;*/
}

.navbar.navbar-transparent .ckclogo .letters path,
.navbar.navbar-transparent .ckclogo .border {
    fill: #efefef;
}

/* When navbar does not have class .navbar-transparent (aka scrolled past the top) */
.navbar:not(.navbar-transparent) .ckclogo .border {
    fill: #efefef;
}

.navbar:not(.navbar-transparent) .ckclogo .letters path {
    fill: #efefef;
    animation-duration: 1s;
    animation-iteration-count: infinite;
    animation-direction: alternate;
    animation-timing-function: ease-in-out;
    animation-name: alternating-logo-letters;
}

/* Nav links */
.navbar:not(.navbar-transparent) .navbar-nav > li > a {
    color: #efefef;
}

.navbar:not(.navbar-transparent) .navbar-nav > li > a:hover {
    color: #222;
}

@media (min-width: 768px) {
    .navbar:not(.navbar-transparent) .navbar-nav > li > a {
        padding-top: 15px;
        padding-bottom: 15px;
    }

    #who-for img {
        width: 150px;
    }

    #brand_draper {
        margin-top: 30px;
    }

    a #brand_draper:hover {
        margin-top: 25px;
    }
}

@media (max-width: 768px) {
    .navbar-custom {
        background: none;
        border: 0;
        border-bottom: 0 !important;
    }

    #home {
        background-position: 98% center;
    }

    #who-for {
        padding-bottom: 20px;
    }

    #who-for img {
        width: 65%;
        padding-bottom: 35px;
    }

    .panel-body img {
        height: auto !important;
    }

    .hs-title-size-3 {
        font-size: 28px;
    }
}

.caption-content {
    text-align: left;
    text-shadow: 0 0 1px #60aed9;
}

#typewriter {
    /*min-width: 100%;*/
}

#typewriter .cursor {
    color: #ef6d7e;
    font-weight: bold;
    text-shadow: none;
}

#typewriter .cursor.off {
    opacity: 0;
}

.font-code {
    font-family: monospace;
}

/******************************************************************************
 Styles common to all sections/modules
 *****************************************************************************/
section h1 {
    text-align: center;
    font-family: "Overpass", sans-serif;
    font-size: 60px;
    color: #ef6d7e;
    font-weight: bold;
    margin: 40px;
}

.brands {
    padding-top: 20px;
    text-align: center;
}

.brands img {
    /*width: 64px;*/
    /*height: 64px;*/
    margin: 10px;
}

a > img {
    /*border: 3px outset transparent;*/
    /*box-sizing: border-box;*/
}

a:hover > img {
    margin-top: 5px;
    margin-bottom: 15px;

    -webkit-transition: all 0.1s ease-in-out;
    -moz-transition: all 0.1s ease-in-out;
    -o-transition: all 0.1s ease-in-out;
    transition: all 0.1s ease-in-out;
}

/******************************************************************************
 Description
 *****************************************************************************/
#top-description {
    padding: 160px 0;
    min-height: 100vh;
}

#top-description .panel a {
    color: rgb(27, 60, 125);
}

#top-description .panel-body {
    position: relative;
    text-align: center;
}

#top-description .panel-body img {
    height: 328px;
    text-align: center;
}

.panel-body .expand-profile {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    padding: 20px;
    bottom: -20px;
    opacity: 0;
    color: rgb(249, 249, 249);
    background-color: rgba(96, 174, 217, 0.95);
    border-radius: 0 0 4px 4px;

    -webkit-transition: all 0.25s ease-in-out;
    -moz-transition: all 0.25s ease-in-out;
    -o-transition: all 0.25s ease-in-out;
    transition: all 0.25s ease-in-out;
}

.panel-body:hover .expand-profile {
    opacity: 1;
}

.expand-profile dd {
    margin-bottom: 5px;
    /*margin-left: 135px;*/
}

.expand-profile dt {
    /*width: 120px;*/
}

.panel-default > .panel-heading {
    color: #f2fcfd;
    background-color: rgba(239, 109, 126, 0.55);
}

/* What we do */
#what-we-do {
    padding-bottom: 150px;
}

#what-we-do img {
    width: 64px;
}

/* Who for */
#who-for a {
    display: block;
    margin-bottom: 20px;
}

.work-details-title {
    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
    display: inline-block;
    color: rgba(0, 0, 0, 0.8);
}

.experience-list {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

#projects {
    padding-bottom: 80px;
}

/******************************************************************************
 Landscape
 *****************************************************************************/
#landscape {
    background: linear-gradient(
            rgba(239, 109, 126, 0),
            rgba(239, 109, 126, 0.55)
    ), url('../../assets/images/wwd_bg.jpg');
    background-size: cover;
    text-align: center;
}

/* Contact us */
.comment-form h4 {
    color: #efefef !important;
    text-shadow: 0 0 5px rgba(35, 75, 97, 0.8);
}

.form-control {
    text-transform: none;
}

.comment-form {
    padding: 100px 0;
}

/* Bottom links */
.footer-captions {
    padding: 100px 0;
    color: #efefef;
    text-shadow: 0 0 10px rgb(1, 19, 29);
}

.footer-captions a {
    color: #efefef;
    cursor: pointer;
}

.footer-captions a:hover {
    /*color: #99d8f1;*/

    /*color: #3a6a7d;*/
    /*text-shadow: 0 0 2px rgba(35, 75, 97, 0.8);*/
    /*color: rgba(58, 106, 125, 0.25);*/
    text-shadow: 0 0 0 #fff;
}

/*.module {*/
/*!*background-color: red;*!*/

/*background-image: url("../images/bg_pattern.jpg");*/
/*background-repeat: repeat;*/
/*-webkit-background-size: inherit;*/
/*}*/

.copyright, .copyright a {
    color: #efefef;
}

.copyright a:hover {
    color: #a34646;
}

